gitlab-omnibus-16.11.2/manifests/gitlab-omnibus-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: gitlab-omnibus
  namespace: <NAMESPACE>
spec:
  parentRefs:
    - name: cluster-gateway
      namespace: envoy-gateway-system
  hostnames:
    - <DOMAIN_NAME>
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: gitlab-omnibus
          port: 80
